Track and return onboarding completion in user profile
- Removed all the logic of tracking onboarding steps, those are not needed for now
- Track a new onboarding_complete flag in the user profile; for now, this is set after desired skills are set during onboarding
- Return onboarding_complete in user profile
